# jetson

./: .gitignore  glocal_map.csv  straight_path.csv
.github/workflows/: codex-apply-tracking-patch.yml
imac_analysis_system/: package.xml
imac_control_system/config/: vehicle_controller.params.yaml
imac_control_system/include/imac_control_system/application/: vehicle_controller_node.hpp
imac_control_system/launch/: application_nodes.launch.py
imac_control_system/src/application/: trajectory_plan_node.cpp
imac_control_system/src/comm/: udp_publisher_node.cpp
imac_interfaces/: package.xml
imac_interfaces/msg/: GlobalPath.msg  Obstacles.msg  PWMCommand.msg  VehicleStatusMav.msg  VehicleStatusOde.msg  VirtualControlCommand.msg
launch_pkg/: package.xml
launch_pkg/launch/: hils_launch.py  launch.py
mpclib_vendor/mpclib_vendor/: CMakeLists.txt  package.xml
src/imac_analysis_system/: CMakeLists.txt
src/imac_bag/: CMakeLists.txt  package.xml
src/imac_bag/launch/: image_bag.launch.py  log_bag.launch.py
src/imac_control_system/: CMakeLists.txt  package.xml
src/imac_control_system/include/imac_control_system/application/: trajectory_plan_node.hpp
src/imac_control_system/include/imac_control_system/comm/: udp_publisher_node.hpp
src/imac_control_system/launch/: comm_nodes.launch.py
src/imac_control_system/src/application/: vehicle_controller_node.cpp
src/imac_interfaces/: CMakeLists.txt
src/imac_interfaces/msg/: FakeObstacles.msg  FsmMode.msg  HilsObstacles.msg  TwinMode.msg  VehicleStatusHils.msg
src/imac_interfaces/srv/: SetTwinMode.srv
src/launch_pkg/: CMakeLists.txt
src/virtual_control/: CMakeLists.txt  local_map.csv  local_map_1.csv  local_map_2.csv  local_map_3.csv
src/virtual_control/config/: straight_mocap_pwm.yaml  tracking_control_split.yaml
src/virtual_control/data/: straight_path_start_m0p40_m0p92_yplus_2m.csv
src/virtual_control/include/virtual_control/: mc_test.hpp  tracking_control.hpp  trajectory_plan_node.hpp
src/virtual_control/launch/: straight_mocap_pwm.launch.py
src/virtual_control/src/: ackermann_to_control_node.cpp  csv_path_publisher_node.cpp  leatherback_stanley_node.cpp  lower_duty_node.cpp  straight_mocap_pwm_node.cpp  test.py  tracking_control.cpp  tracking_controller_node.cpp  trajectory_plan_node.cpp
src/virtual_control_bringup/launch/: virtual_control_bringup.launch.py
src/virtual_control_bringup/src/: virtual_control_pipeline.launch.py
virtual_control/: .codex_tracking_control_split.patch.gz.b64  CMakeLists.txt  local_map.csv  package.xml
virtual_control/config/: tracking_control_split.yaml
virtual_control/include/virtual_control/: tracking_control.hpp  tracking_controller_node.hpp  upper_planner_node.hpp
virtual_control/launch/: tracking_control_split.launch.py
virtual_control/src/: lower_duty_node.cpp  path_tracking_ackermann_node.cpp  test.py  tracking_control.cpp  upper_planner_node.cpp
virtual_control_bringup/: CMakeLists.txt  package.xml
