<?xml version="1.0"?>
<package format="3">
  <name>launch_pkg</name>
  <version>0.0.1</version>
  <description>Unified bringup launch package</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <!-- 빌드 도구 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 런치 파일에서 사용하는 런타임 의존성 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <!-- get_package_share_directory() 쓸 때 필요 -->
  <exec_depend>ament_index_python</exec_depend>

  <!-- (선택) 테스트 의존성 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

