<?xml version="1.0"?>
<package format="3">
  <name>virtual_control_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for virtual_control stack</description>

  <maintainer email="fairytail0508@naver.com">eunhu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- 실제 노드 패키지 -->
  <exec_depend>virtual_control</exec_depend>
  <exec_depend>imac_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

