<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imac_bag</name>
  <version>0.0.0</version>
  <description>TODO</description>
  <maintainer email="ckdrb0109@gmail.com">pi</maintainer>
  <license>TODO</license>

<exec_depend>ros2launch</exec_depend>
<exec_depend>rosbag2</exec_depend>
<exec_depend>rosbag2_storage_default_plugins</exec_depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
